# DictionaryCompression

./: .gitignore  CMakeLists.txt  README.md  clean.cpp  clean.h  compress.cpp  compress.h  dictionary.cpp  dictionary.h  graph.cpp  main.cpp  mbd.txt  out.txt  sizes.txt  test.cpp
Compressed/: A-135.txt  Abominable-459.txt  All-559.txt  And-334.txt  At-574.txt  Battery-573.txt  Be-423.txt  Black-175.txt  Blanco-345.txt  But-86.txt  Cape-238.txt  Crossing-361.txt  England-79.txt  Entering-0.txt  Enveloped-713.txt  Ever-164.txt  Feegees-706.txt  Fill-487.txt  Grampus-694.txt  He-586.txt  Horn-493.txt  Horner-239.txt  Hurrah-702.txt  Hyperborean-186.txt  I-233.txt  Iceland-603.txt  In-215.txt  Inn-5.txt  Is-665.txt  It-173.txt  Javan-338.txt  Jonah-443.txt  Labrador-727.txt  Landlord-647.txt  Mixed-308.txt  My-642.txt  Nathan-326.txt  New-78.txt  No-732.txt  Nothing-608.txt  (+731 more)
